medicine edits sched